--- a/pymakr.conf
+++ b/pymakr.conf
@@ -10,21 +10,9 @@
         ".vscode",
         ".gitignore",
         ".git",
-        "project.pymakr",
-        "env",
-        "venv",
         "settings.example.py",
         "README.md",
-        "setup.py",
-        "sdist_upip.py",
-        "MANIFEST",
-        "main.py.bak",
-        "main-distance.py",
-        "install.mpf",
-        "LICENSE",
-        "dist",
-        "micropython_ruuvitag.egg-info",
-        "ruuvitag.egg-info"
+        "LICENSE.md"
     ],
     "fast_upload": false
 }
